2007-06-27  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Darin.

        - <rdar://problem/5271937> REGRESSION: Apparent WebKit JavaScript memory smasher when submitting comment to iWeb site (crashes in kjs_pcre_compile2)
        - Correctly evaluate the return value of _pcre_ucp_findchar.

        * fast/js/regexp-unicode-overflow-expected.txt: Added.
        * fast/js/regexp-unicode-overflow.html: Added.
        * fast/js/resources/regexp-unicode-overflow.js: Added.

2007-06-27  Sam Weinig  <sam@webkit.org>

        Reviewed by Geoff.

        Update tests for http://bugs.webkit.org/show_bug.cgi?id=14319
        Move the Selection object out of the JS bindings

        * fast/dom/Window/window-properties-expected.txt:
        * fast/js/toString-and-valueOf-override-expected.txt:
        * http/tests/security/cross-frame-access-expected.txt:

2007-06-27  Sam Weinig  <sam@webkit.org>

        Reviewed by Adam Roben.

        Tests for http://bugs.webkit.org/show_bug.cgi?id=12045
        Crash under gmalloc at WTF::RefPtr<WebCore::HTMLSliderThumbElement>::operator->
        <rdar://problem/5286670>

        * fast/forms/thumbslider-crash-expected.checksum: Added.
        * fast/forms/thumbslider-crash-expected.png: Added.
        * fast/forms/thumbslider-crash-expected.txt: Added.
        * fast/forms/thumbslider-crash.html: Added.
        * fast/forms/thumbslider-no-parent-slider-expected.checksum: Added.
        * fast/forms/thumbslider-no-parent-slider-expected.png: Added.
        * fast/forms/thumbslider-no-parent-slider-expected.txt: Added.
        * fast/forms/thumbslider-no-parent-slider.html: Added.

2007-06-27  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by John.
        
        <rdar://problem/5247341> REGRESSION: Pasting sometimes loses trailing newline
        
        Demonstrates the bug:
        * editing/pasteboard/5247341-expected.checksum: Added.
        * editing/pasteboard/5247341-expected.png: Added.