@@ -1,0 +1,4 @@
+This page tests that invalid values for the word-break and -webkit-user-modify properties are rejected by the CSS parser.
+
+PASS
+
