@@ -1,3 +1,12 @@
+2007-06-28  Adam Roben  <aroben@apple.com>
+
+        New test for <rdar://problem/5300443> word-break and -webkit-user-modify allow any value
+
+        Reviewed by Hyatt.
+
+        * fast/css/word-break-user-modify-allowed-values-expected.txt: Added.
+        * fast/css/word-break-user-modify-allowed-values.html: Added.
+
 2007-06-27  Kevin McCullough  <kmccullough@apple.com>
 
         Reviewed by Darin.
